# AKIR-EDR

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
Agent/: EDRAgent.cpp  EDRAgent.h
Docs/: Architecture.md
Driver/: edrdrv.c
Scripts/Deployment/: Install-EDR.ps1
docs/: AKIR_Architecture_DeepDive.md  architecture_flow.mermaid
policies/: WDAC_EDR.xml
scripts/: Build.ps1  Install.ps1
scripts/Maintenance/: Backup-System.ps1
src/agent/: AdminAuth.cpp  AdminAuth.h  IntegrityGuard.cpp  main.cpp
src/kernel/: CMakeLists.txt  edrdrv.c
src/server/: manager_api.py
tests/: test_auth_logic.cpp
